# src/core/auth/authController/register.js
@@ -1,6 +1,7 @@
 const bcrypt = require('bcrypt');
 const userService = require('../../user/userService');
 const roleService = require('../../role/roleService');
+const categoryService = require('../../category/categoryService');
 const { createError } = require('../../../helpers');
 
 const register = async (req, res) => {
@@ -15,11 +16,13 @@ const register = async (req, res) => {
   );
   const name = email.slice(0, email.indexOf('@'));
   const userRole = await roleService.getRoleByName('USER');
+  const categories = await categoryService.getDefaultCategory();
   const newUser = await userService.addUser({
     ...req.body,
     password: hashPassword,
     name,
     roles: [userRole.name],
+    categories,
   });
 
   res.status(201).json({
